--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,9 @@ jobs:
       - run:
           name: Unit Testing using Karma
           command: |
-            apt-get install ttf-freefont
             apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg --no-install-recommends
             curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && echo "deb https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
-            apt-get update && apt-get install -y google-chrome-stable fontconfig fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-symbola fonts-noto ttf-freefont --no-install-recommends
+            apt-get update && apt-get install -y google-chrome-stable fontconfig fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-symbola fonts-noto fonts-ttf-freefont --no-install-recommends
             apt-get purge --auto-remove -y curl gnupg && rm -rf /var/lib/apt/lists/*
             apt-get update -y && apt-get install -y && apt-get install -y apt-utils && apt-get install -y --no-install-recommends apt-utils apt-get install -y default-jre && apt install -y iceweasel && apt install -y fonts-liberation && apt install -y libappindicator3-1 && apt install -y libxss1 && apt install -y lsb-release && apt install -y xdg-utils && apt install -y net-tools
             apt-get update && apt-get install -y openjdk-8-jre-headless && apt-get install -y ca-certificates-java
@@ -69,10 +68,9 @@ jobs:
       - run:
           name: E2E Testing using Protractor
           command: |
-            apt-get install ttf-freefont
             apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg --no-install-recommends
             curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && echo "deb https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
-            apt-get update && apt-get install -y google-chrome-stable fontconfig fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-symbola fonts-noto ttf-freefont --no-install-recommends
+            apt-get update && apt-get install -y google-chrome-stable fontconfig fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-symbola fonts-noto fonts-ttf-freefont --no-install-recommends
             apt-get purge --auto-remove -y curl gnupg && rm -rf /var/lib/apt/lists/*
             npm install protractor
             node node_modules/protractor/bin/webdriver-manager update
