--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,19 @@ jobs:
       - image: node:12.13
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-deps-{{ checksum "package-lock.json" }}
       - run:
           name: Prebuild
           command: |
             export NODE_OPTIONS=--max_old_space_size=8192
             npm install
             apt-get update && apt-get install -y zip
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - persist_to_workspace:
           root: .
           paths:
