another cacheless run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 
 jobs:
-  # Prebuild tasks
+  # Prebuild
   prebuild:
     docker:
-      - image: node:12.13
+      - image: node:12.13 # cimg/node:12.13
     steps:
       - checkout
       # - restore_cache:
