--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   prebuild:
     docker:
       - image: node:12.13 # cimg/node:12.13 circleci/node:12.13
-    # resource_class: xlarge
+    resource_class: xlarge
     steps:
       - checkout
       # - restore_cache:
@@ -30,7 +30,7 @@ jobs:
   build:
     docker:
       - image: node:12.13
-    # resource_class: xlarge
+    resource_class: xlarge
     steps:
       - attach_workspace:
           at: .
@@ -53,7 +53,7 @@ jobs:
   unit-test:
     docker:
       - image: node:12.13
-    # resource_class: xlarge
+    resource_class: xlarge
     steps:
       - attach_workspace:
           at: .
@@ -78,7 +78,7 @@ jobs:
   e2e:
     docker:
       - image: node:12.13
-    # resource_class: xlarge
+    resource_class: xlarge
     steps:
       - attach_workspace:
           at: .
@@ -103,7 +103,7 @@ jobs:
   deploy:
     docker:
       - image: node:12.13
-    # resource_class: xlarge
+    resource_class: xlarge
     steps:
       - attach_workspace:
           at: .
