--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  aws-s3: circleci/aws-s3@1.0.16
+
 jobs:
   # Prebuild
   prebuild:
@@ -107,25 +110,13 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run:
-          name: Deploy to AWS
-          command: |
-            # export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_DEV01
-            # export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_DEV01
-            apt-get update && apt-get -y install python-dev
-            curl -O https://bootstrap.pypa.io/get-pip.py
-            python get-pip.py
-            pip install awscli --upgrade
-            python --version
-            pip --help
-            aws --version
-            # aws s3 sync ./dist/meantoo s3://meantoo.elkay.com --sse AES256 --delete
-            # pipe: atlassian/aws-cloudfront-invalidate:0.1.2
-            # variables:
-            #   AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-            #   AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-            #   AWS_DEFAULT_REGION: 'us-west-2'
-            #   DISTRIBUTION_ID: 'ASDFASDFASDAFA'
+      - aws-s3/sync:
+          arguments: |
+            ---sse AES256
+          from: ./dist/meantoo
+          overwrite: true
+          to: 's3://sitesb01.cartus.com'
+
 
 workflows:
   version: 2
@@ -143,6 +134,7 @@ workflows:
             - build
       - deploy:
           type: approval
+          context: Sandbox Test
           requires:
             - unit-test
             - e2e
