config.yml edited online with Bitbucket

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ workflows:
           requires:
             - build
       - deploy:
-          type: approval
+          type: hold
           context: Sandbox Test
           requires:
             - unit-test
