--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,13 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run:
+          name: Deploy to AWS
+          command: |
+            apt-get update && apt-get -y install python-dev
+            curl -O https://bootstrap.pypa.io/get-pip.py
+            python get-pip.py
+            pip install awscli --upgrade
       - aws-s3/sync:
           arguments: |
             ---sse AES256
