--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,21 +105,11 @@ jobs:
   # Deploy to AWS
   deploy:
     docker:
-      - image: node:12.13
+      - image: circleci/python:node-browsers
     # resource_class: xlarge
     steps:
       - attach_workspace:
           at: .
-      - run:
-          name: Deploy to AWS
-          command: |
-            apt-get update && apt-get -y install python-dev
-            curl -O https://bootstrap.pypa.io/get-pip.py
-            python get-pip.py
-            pip install awscli --upgrade
-            python --version
-            pip --help
-            aws --version
       - aws-s3/sync:
           arguments: |
             ---sse AES256
