--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,9 +110,22 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+            - run:
+          name: Deploy to AWS
+          command: |
+            # export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_DEV01
+            # export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_DEV01
+            #apt-get update && apt-get -y install python-dev
+            #curl -O https://bootstrap.pypa.io/get-pip.py
+            #python get-pip.py
+            pip install awscli --upgrade
+            python --version
+            pip --help
+            aws --version
+            aws s3 sync ./dist/meantoo s3://sitesb01.cartus.com --sse AES256 --delete
       - aws-s3/sync:
           arguments: |
-            ---sse AES256
+            ---sse AES256 --delete
           from: ./dist/meantoo
           overwrite: true
           to: 's3://sitesb01.cartus.com'
