--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           root: .
           paths:
             - .
-            
+
   # Build Angular
   build:
     docker:
@@ -122,11 +122,11 @@ jobs:
             python --version
             pip --help
             aws --version
-            aws s3 sync ./dist/meantoo s3://sitesb01.cartus.com --sse AES256 --delete
+            aws s3 sync ./dist/frontend s3://sitesb01.cartus.com --sse AES256 --delete
       - aws-s3/sync:
           arguments: |
             ---sse AES256 --delete
-          from: ./dist/meantoo
+          from: ./dist/frontend
           overwrite: true
           to: 's3://sitesb01.cartus.com'
 
