--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,13 +110,8 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - aws-s3/sync:
-          arguments: |
-            ---sse AES256 --delete
-          from: ./dist/frontend
-          overwrite: true
-          to: 's3://sitesb01.cartus.com'
       - run:
+          context: Sandbox-Test
           name: Deploy to AWS
           command: |
             # export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_DEV01
@@ -129,6 +124,13 @@ jobs:
             pip --help
             aws --version
             aws s3 sync ./dist/frontend s3://sitesb01.cartus.com --sse AES256 --delete
+      - aws-s3/sync:
+          context: Sandbox-Test
+          arguments: |
+            ---sse AES256 --delete
+          from: ./dist/frontend
+          overwrite: true
+          to: 's3://sitesb01.cartus.com'
 
 
 workflows:
