--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ jobs:
             python --version
             pip --help
             aws --version
-            aws s3 sync ./dist/frontend s3://sitesb01.cartus.com --sse AES256
+            aws s3 sync ./dist/frontend s3://sitesb01.cartus.com
       - aws-s3/sync:
           arguments: |
             ---sse AES256 --delete
