--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,10 +118,10 @@ jobs:
             python --version
             pip --help
             aws --version
-            aws s3 sync ./dist/frontend s3://sitesb01.cartus.com
+            aws s3 sync ./dist/frontend s3://sitesb01.cartus.com --sse AES256 --delete
       - aws-s3/sync:
           arguments: |
-            ---sse AES256 --delete
+            --delete
           from: ./dist/frontend
           overwrite: true
           to: 's3://sitesb01.cartus.com'
