--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ workflows:
   build-test-deploy:
     jobs:
       # - prebuild
-      - build:
+      - build #:
           # requires:
           #   - prebuild
       - unit-test:
