--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - restore_cache:
-          keys:
-            - v1-deps-{{ checksum "package-lock.json" }}
+      # - restore_cache:
+      #     keys:
+      #       - v1-deps-{{ checksum "package-lock.json" }}
       - run:
           name: Build Angular
           command: |
