--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,11 @@ jobs:
       - image: node:12.13
     # resource_class: xlarge
     steps:
-      - attach_workspace:
-          at: .
-      # - restore_cache:
-      #     keys:
-      #       - v1-deps-{{ checksum "package-lock.json" }}
+      # - attach_workspace:
+      #     at: .
+      - restore_cache:
+          keys:
+            - v1-deps-{{ checksum "package-lock.json" }}
       - run:
           name: Build Angular
           command: |
@@ -47,10 +47,10 @@ jobs:
             npm install
             apt-get update && apt-get install -y zip
             npm run build
-      # - save_cache:
-      #     key: v1-deps-{{ checksum "package-lock.json" }}
-      #     paths:
-      #       - node_modules
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - persist_to_workspace:
           root: .
           paths:
@@ -67,9 +67,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      # - restore_cache:
-      #     keys:
-      #       - v1-deps-{{ checksum "package-lock.json" }}
+      - restore_cache:
+          keys:
+            - v1-deps-{{ checksum "package-lock.json" }}
       - run:
           name: Unit Testing using Karma
           command: |
@@ -92,9 +92,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      # - restore_cache:
-      #     keys:
-      #       - v1-deps-{{ checksum "package-lock.json" }}
+      - restore_cache:
+          keys:
+            - v1-deps-{{ checksum "package-lock.json" }}
       - run:
           name: E2E Testing using Protractor
           command: |
